tests/paczka1/fuzzy1/66308744.err
Error in line 17: tTnfxXmWtIF S180 12,9
Error in line 13: D4Sqo0yE A486 84,9
Error in line 19: D4Sqo0yE A509 92,1
Error in line 29: QRPf6V A486 32,8
